<resources>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_maps">Map</string>
    <string name="start_up_week_end">Startups Weekend Sudan</string>
    <string name="rate_now_btn_label">Rate now</string>
    <string name="number_sample">112</string>
    <string name="followers">Followers</string>
    <string name="events">Events</string>
    <string name="review">Review</string>
    <string name="sample_descripition">rambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem</string>
    <string name="leave_review">Leave Review</string>
    <string name="comment_hint">Leave a comment or Review here</string>
    <string name="post">Post</string>
    <string name="follow">Follow</string>
    <string name="title_activity_add_entitiy">AddEntitiyActivity</string>
    <string name="large_text">
        "Material is the metaphor.\n\n"

        "A material metaphor is the unifying theory of a rationalized space and a system of motion."
        "The material is grounded in tactile reality, inspired by the study of paper and ink, yet "
        "technologically advanced and open to imagination and magic.\n"
        "Surfaces and edges of the material provide visual cues that are grounded in reality. The "
        "use of familiar tactile attributes helps users quickly understand affordances. Yet the "
        "flexibility of the material creates new affordances that supercede those in the physical "
        "world, without breaking the rules of physics.\n"
        "The fundamentals of light, surface, and movement are key to conveying how objects move, "
        "interact, and exist in space and in relation to each other. Realistic lighting shows "
        "seams, divides space, and indicates moving parts.\n\n"

        "Bold, graphic, intentional.\n\n"

        "The foundational elements of print based design typography, grids, space, scale, color, "
        "and use of imagery guide visual treatments. These elements do far more than please the "
        "eye. They create hierarchy, meaning, and focus. Deliberate color choices, edge to edge "
        "imagery, large scale typography, and intentional white space create a bold and graphic "
        "interface that immerse the user in the experience.\n"
        "An emphasis on user actions makes core functionality immediately apparent and provides "
        "waypoints for the user.\n\n"

        "Motion provides meaning.\n\n"

        "Motion respects and reinforces the user as the prime mover. Primary user actions are "
        "inflection points that initiate motion, transforming the whole design.\n"
        "All action takes place in a single environment. Objects are presented to the user without "
        "breaking the continuity of experience even as they transform and reorganize.\n"
        "Motion is meaningful and appropriate, serving to focus attention and maintain continuity. "
        "Feedback is subtle yet clear. Transitions are efﬁcient yet coherent.\n\n"

        "3D world.\n\n"

        "The material environment is a 3D space, which means all objects have x, y, and z "
        "dimensions. The z-axis is perpendicularly aligned to the plane of the display, with the "
        "positive z-axis extending towards the viewer. Every sheet of material occupies a single "
        "position along the z-axis and has a standard 1dp thickness.\n"
        "On the web, the z-axis is used for layering and not for perspective. The 3D world is "
        "emulated by manipulating the y-axis.\n\n"

        "Light and shadow.\n\n"

        "Within the material environment, virtual lights illuminate the scene. Key lights create "
        "directional shadows, while ambient light creates soft shadows from all angles.\n"
        "Shadows in the material environment are cast by these two light sources. In Android "
        "development, shadows occur when light sources are blocked by sheets of material at "
        "various positions along the z-axis. On the web, shadows are depicted by manipulating the "
        "y-axis only. The following example shows the card with a height of 6dp.\n\n"

        "Resting elevation.\n\n"

        "All material objects, regardless of size, have a resting elevation, or default elevation "
        "that does not change. If an object changes elevation, it should return to its resting "
        "elevation as soon as possible.\n\n"

        "Component elevations.\n\n"

        "The resting elevation for a component type is consistent across apps (e.g., FAB elevation "
        "does not vary from 6dp in one app to 16dp in another app).\n"
        "Components may have different resting elevations across platforms, depending on the depth "
        "of the environment (e.g., TV has a greater depth than mobile or desktop).\n\n"

        "Responsive elevation and dynamic elevation offsets.\n\n"

        "Some component types have responsive elevation, meaning they change elevation in response "
        "to user input (e.g., normal, focused, and pressed) or system events. These elevation "
        "changes are consistently implemented using dynamic elevation offsets.\n"
        "Dynamic elevation offsets are the goal elevation that a component moves towards, relative "
        "to the component’s resting state. They ensure that elevation changes are consistent "
        "across actions and component types. For example, all components that lift on press have "
        "the same elevation change relative to their resting elevation.\n"
        "Once the input event is completed or cancelled, the component will return to its resting "
        "elevation.\n\n"

        "Avoiding elevation interference.\n\n"

        "Components with responsive elevations may encounter other components as they move between "
        "their resting elevations and dynamic elevation offsets. Because material cannot pass "
        "through other material, components avoid interfering with one another any number of ways, "
        "whether on a per component basis or using the entire app layout.\n"
        "On a component level, components can move or be removed before they cause interference. "
        "For example, a floating action button (FAB) can disappear or move off screen before a "
        "user picks up a card, or it can move if a snackbar appears.\n"
        "On the layout level, design your app layout to minimize opportunities for interference. "
        "For example, position the FAB to one side of stream of a cards so the FAB won’t interfere "
        "when a user tries to pick up one of cards.\n\n"
    </string>
    <string name="action_settings">Settings</string>
    <string name="welcome">Welcome</string>
    <string name="welcome_text_description">Here we should put text to let user register in our app Here we should put text to let user register in our app¬</string>
    <string name="user_name">Username</string>
    <string name="password">Passowrd</string>
    <string name="sgin_in">Sign in</string>
    <string name="sign_up_as_org">Sign up</string>
    <string name="or">OR</string>
    <string name="sign_in_as_guest">Sign in as guest</string>
    <string name="sample_name">John Doe</string>
    <string name="sample_comment">Nice Done, Such Great Place Nice Done, Such Great Place Nice Done, Such Great Place Nice Done, Such Great Place</string>
    <string name="sample_date_in_month">2 month ago</string>
    <string name="email">Email</string>
    <string name="password_confirmation">Password Confirmation</string>
    <string name="company">Company</string>
    <string name="privacy_string">
        Here is a text explaining to the user that upon registration,  <font color="#003a7c">
            <strong>the policy of the agreement    </strong>
        </font> will be approved.
And <font color="#003a7c">
            <strong> Privacy Policy      </strong>
        </font>and its consequences.</string>
    <string name="permission_denied_settings_subtitle">Bawsala app relies heavily on Location permission and without it the app wont function probably, we also use it to get nearby events and entities location</string>
    <string name="permission_denied_settings_title">Permission required</string>
    <string name="open_settings">Open settings</string>
    <string name="grant">Grant</string>
    <string name="places">Places</string>
    <string name="type_search_here">Type search here…</string>
    <string name="sign_up">Sign up</string>
    <string name="name">Name</string>
    <string name="email_not_valid">Email not valid</string>
    <string name="password_required">Password required</string>
    <string name="password_should_be_8_chars">Password should be 6 characters at least</string>
    <string name="please_confirm_password">Please confirm your password</string>
    <string name="password_didnt_match">Password did not match</string>
    <string name="name_required">Name required</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="terms_of_use">Terms of use</string>
    <string name="faq">FAQ</string>
    <string name="title_activity_event_details">EventDetails</string>
    <string name="view_more">View more !!</string>
    <string name="ticket_price">Ticket price</string>
    <string name="free">Free</string>
    <string name="seats">Seats</string>
    <string name="apply_now">APPLY NOW !</string>
    <string name="guest_user">Guest user</string>
    <string name="guest_user_tap_to_login">Tap here to login</string>
    <string name="retry">Retry</string>
    <string name="failed_to_load_details">Failed to load the details</string>
    <string name="write_review_first">Write a review first</string>
    <string name="organization_location">Organization location</string>
    <string name="continue_complete">Continue and Complete</string>
    <string name="upload_cover_photo">Upload cover\nphoto</string>
    <string name="crop_cover_title">Crop your cover image</string>
    <string name="crop_profile_title">Crop your profile image</string>
    <string name="company_location_marker_title">Company location</string>
    <string name="select_category">Select category</string>
    <string name="failed_to_load_categories">Failed to load categories</string>
    <string name="failed_to_pick_image">Failed to pick image</string>
    <string name="event_information">Event Information</string>
    <string name="event_name">Event Name</string>
    <string name="description">Description</string>
    <string name="address">Address</string>
    <string name="event_image">Event Image</string>
    <string name="pick_select_an_image">Pick/Select an image</string>
    <string name="seat_count">Seat count</string>
    <string name="seat_price">Seat Price</string>
    <string name="registration_link">Registration link</string>
    <string name="application_date">Application Date</string>
    <string name="to">TO</string>
    <string name="assign_event_to">Assign event to</string>
    <string name="information_about_location">Information about location</string>
    <string name="start_date">Start date</string>
    <string name="end_date">End date</string>
    <string name="select_assigned_place">Select Assigned Place</string>
    <string name="failed_to_rate_entity">Failed to rate entity, try again</string>
    <string name="failed_to_follow">Failed to follow, try again</string>
    <string name="followed_successfully">Followed successfully.</string>
    <string name="unfollowed_successfully">Unfollowed successfully.</string>
    <string name="full_name">Full name</string>
    <string name="e_mail_address">E-mail address</string>
    <string name="save">Save</string>
    <string name="type">Type</string>
</resources>