<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_margin="4dp">

    <ImageView
        android:id="@+id/reviewerImage"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginStart="6dp"
        android:layout_marginTop="6dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@mipmap/ic_launcher" />

    <TextView
        android:id="@+id/reviewer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="6dp"

        android:fontFamily="@font/neo_sans_arabic_bold"
        tools:text="@string/sample_name"
        android:textSize="12sp"
        android:textColor="@color/black"
        app:layout_constraintStart_toEndOf="@+id/reviewerImage"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/reviewContent"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="4dp"
        android:layout_marginEnd="4dp"
        tools:text="@string/sample_comment"
        android:textAppearance="@style/TextAppearance.MaterialComponents.Body1"
        android:textColor="@color/black"
        android:textSize="12sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/reviewerImage"
        app:layout_constraintTop_toBottomOf="@+id/reviewer" />

    <TextView
        android:id="@+id/reviewDate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="6dp"
        android:layout_marginBottom="8dp"
        tools:text="@string/sample_date_in_month"
        android:textSize="12sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@+id/reviewerImage"
        app:layout_constraintTop_toBottomOf="@+id/reviewContent" />




</androidx.constraintlayout.widget.ConstraintLayout>