<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_margin="0dp"
    android:orientation="vertical"

    app:cardBackgroundColor="@color/white"
    app:contentPadding="0dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:id="@+id/profileCoverImage"
                android:layout_width="match_parent"
                android:layout_height="150dp"
                android:background="@color/GhostWhite"
                android:scaleType="centerCrop" />

            <ImageView
                android:id="@+id/profileImage"
                android:layout_width="120dp"
                android:layout_height="120dp"
                android:layout_gravity="bottom|center"
                android:layout_marginTop="90dp"
                android:scaleType="fitXY"
                app:layout_anchor="@+id/nestedScrollView"
                app:layout_anchorGravity="top|center"
                tools:srcCompat="@drawable/ic_icon" />


        </FrameLayout>

        <TextView
            android:id="@+id/companyNameTxt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="16dp"
            android:fontFamily="@font/neo_sans_arabic_bold"
            tools:text="@string/start_up_week_end"
            android:textAppearance="@style/TextAppearance.AppCompat.Body2"
            android:textColor="@android:color/black"
            android:textSize="18sp" />

        <com.google.android.material.chip.ChipGroup
            android:id="@+id/tagsGroup"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:gravity="center"

            app:singleLine="true"/>



        <TextView
            android:id="@+id/companyDescription"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:gravity="center"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="16dp"
            tools:text="@string/sample_descripition"

            android:textSize="14sp" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/viewMoreButton"
            app:iconTint="@color/colorAccent"
            app:backgroundTint="#E5EBF2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/neo_sans_arabic_bold"
            android:text="@string/view_more"
            android:textSize="16sp"
            android:layout_marginBottom="16dp"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            app:cornerRadius="8dp"
            app:elevation="0dp"
            style="@style/Widget.MaterialComponents.Button.UnelevatedButton"/>
    </LinearLayout>

</com.google.android.material.card.MaterialCardView>